add_subdirectory(scrollview)
add_subdirectory(xform)
add_subdirectory(texture)
add_subdirectory(xmlquotes)
add_subdirectory(glpixmap)
add_subdirectory(tetrix)
add_subdirectory(tictac)
add_subdirectory(networkprotocol)
add_subdirectory(mail)
add_subdirectory(tabdialog)
add_subdirectory(qwerty)
add_subdirectory(iconview)
add_subdirectory(buttongroups)
add_subdirectory(progress)
add_subdirectory(life)
add_subdirectory(hello)
add_subdirectory(addressbook)
add_subdirectory(helpviewer)
add_subdirectory(application)
add_subdirectory(progressbar)
add_subdirectory(wizard)
add_subdirectory(mdi)
add_subdirectory(overlay)
add_subdirectory(table)
add_subdirectory(ftpclient)
add_subdirectory(dragdrop)
add_subdirectory(richtext)
add_subdirectory(listboxcombo)
add_subdirectory(canvas)
add_subdirectory(statistics)
add_subdirectory(splitter)
add_subdirectory(rot13)
add_subdirectory(validator)
add_subdirectory(xml)
add_subdirectory(drawdemo)
add_subdirectory(movies)
add_subdirectory(popup)
add_subdirectory(customlayout)
add_subdirectory(box)
add_subdirectory(desktop)
add_subdirectory(sound)
add_subdirectory(scribble)
add_subdirectory(action)
add_subdirectory(checklists)
add_subdirectory(httpd)
add_subdirectory(menu)
#add_subdirectory(fileiconview)
add_subdirectory(listbox)
add_subdirectory(dirview)
add_subdirectory(aclock)
add_subdirectory(drawlines)
add_subdirectory(rangecontrols)
add_subdirectory(forever)
add_subdirectory(sharedbox)
add_subdirectory(picture)
add_subdirectory(semaphores)
add_subdirectory(gear)
add_subdirectory(cursor)
add_subdirectory(qfd)
add_subdirectory(tooltip)
add_subdirectory(overlay_x11)
add_subdirectory(layout)
add_subdirectory(biff)
#add_subdirectory(themes)
add_subdirectory(i18n)
add_subdirectory(listviews)
add_subdirectory(lineedits)
add_subdirectory(dclock)
add_subdirectory(qmag)
#add_subdirectory(widgets)
add_subdirectory(guithreads)
add_subdirectory(showimg)
#add_subdirectory(qdir)
